update: db transaction & validation
