# src/routes/auth-route.js
@@ -6,19 +6,21 @@ const validatorMiddleware = require('../middlewares/validator-middleware');
 const CheckRole = require('../middlewares/role-middleware');
 const { AuthsMiddleware } = require('../middlewares/auth-middleware');
 
-const { registerSchema, loginSchema, updateUserSchema, registerAdminMemberSchema, updateUserAdminMemberSchema, updateUserMemberSchema } = require('../utils/joiValidation');
+const { loginSchema, onlyMemberUpdate, onlyAdminUpdate, onlySuperAdmin, onlyMemberAndAdmin, onlySuperAdminUpdate } = require('../utils/joiValidation');
 const { AuthsController } = require('../controllers/auths');
 
-router.post('/superadmin/register', AuthsMiddleware.authentication, CheckRole(['superadmin']), validatorMiddleware(registerSchema), AuthsController.register);
-router.post('/register', CheckRole(['superadmin', 'admin', 'member']), validatorMiddleware(registerAdminMemberSchema), AuthsController.register);
+router.post('/superadmin/register', AuthsMiddleware.authentication, CheckRole(['superadmin']), validatorMiddleware(onlySuperAdmin), AuthsController.register);
+router.post('/admin/register', AuthsMiddleware.authentication, CheckRole(['superadmin', 'admin']), validatorMiddleware(onlyMemberAndAdmin), AuthsController.register);
+router.post('/register', validatorMiddleware(onlyMemberAndAdmin), AuthsController.register);
 
 router.post('/login', validatorMiddleware(loginSchema), AuthsController.login);
 
-router.put('/superadmin/profile', AuthsMiddleware.authentication, CheckRole(['superadmin']), validatorMiddleware(updateUserSchema), AuthsController.update);
-router.put('/admin/profile', AuthsMiddleware.authentication, CheckRole(['superadmin', 'admin']), validatorMiddleware(updateUserAdminMemberSchema), AuthsController.update);
-router.put('/profile', AuthsMiddleware.authentication, CheckRole(['superadmin', 'admin', 'member']), validatorMiddleware(updateUserMemberSchema), AuthsController.update);
+router.patch('/superadmin/profile', AuthsMiddleware.authentication, CheckRole(['superadmin']), validatorMiddleware(onlySuperAdminUpdate), AuthsController.update);
+router.patch('/admin/profile', AuthsMiddleware.authentication, CheckRole(['superadmin', 'admin']), validatorMiddleware(onlyAdminUpdate), AuthsController.update);
+router.patch('/profile', AuthsMiddleware.authentication, CheckRole(['superadmin', 'admin', 'member']), validatorMiddleware(onlyMemberUpdate), AuthsController.update);
+
 router.delete('/profile', AuthsMiddleware.authentication, CheckRole(['superadmin', 'admin', 'member']), AuthsController.delete);
 
-router.get('/me', AuthsMiddleware.authentication, AuthsController.userLoggedIn);
+router.get('/me', AuthsMiddleware.authentication, CheckRole(['superadmin', 'admin', 'member']), AuthsController.userLoggedIn);
 
 module.exports = router;
